--- a/configuration_files/hostapd.conf
+++ b/configuration_files/hostapd.conf
@@ -1,4 +1,9 @@
+
+#Set wifi interface
 interface=${INTERFACE}
-ssid="amir hatzroni"
+#Set network name
+ssid=FakeAP
+#Set channel
 channel=1
+#Set driver
 driver=nl80211
