--- a/captivPortal2/package.json
+++ b/captivPortal2/package.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1"
   },
   "scripts": {
-    "start": "server start" 
+    "start": "server.js"
   }
 }
