--- a/build_up/hostapd.conf
+++ b/build_up/hostapd.conf
@@ -2,7 +2,7 @@
 # Set the interface that will be  used as the fake AP.
 interface=wlp1s0
 #Set the name of the fake access point
-ssid=Ariel-University-2.4
+ssid=Redmi Note 8
 #set the chanel=
 channel=1
 #set the driver=> most drivers usually configured to use nl80211
