everything worksgit add --allgit add --allgit add --all!

--- a/configuration_files/hostapd.conf
+++ b/configuration_files/hostapd.conf
@@ -4,6 +4,9 @@ interface=${INTERFACE}
 #Set the name of the fake access point
 ssid=${SSID_NAME}
 #set the chanel=
-channel=1
+channel=11
 #set the driver=> most drivers usually configured to use nl80211
 driver=nl80211
+hw_mode=g
+macaddr_acl=0
+ignore_broadcast_ssid=0
