add notes to the conf files and access point creation

--- a/configuration_files/hostapd.conf
+++ b/configuration_files/hostapd.conf
@@ -3,10 +3,13 @@
 interface=${INTERFACE}
 #Set the name of the fake access point
 ssid=${SSID_NAME}
-#set the chanel=
+#set the channel
 channel=11
 #set the driver=> most drivers usually configured to use nl80211
 driver=nl80211
+# "g" simply means 2.4GHz band
 hw_mode=g
+# dont use  MAC filtering for the
 macaddr_acl=0
+# dont hide the access point
 ignore_broadcast_ssid=0
